<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_log"
        android:name="com.android04.capstonedesign.ui.log.LogPageFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.android04.capstonedesign.ui.product.ProductPageFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android04.capstonedesign.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_point"
        android:name="com.android04.capstonedesign.ui.point.PointPageFragment"
        android:label="@string/title_point"
        tools:layout="@layout/fragment_point" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.android04.capstonedesign.ui.setting.SettingPageFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>